<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2011  naikon, wexoo
	android@geekosphere.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	 
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    
  	<header
		android:fragment="net.ausgstecktis.ui.PreferencesActivity$GeneralPrefs"
  		android:icon="@drawable/ic_menu_manage"
  		android:title="@string/pc_general"
  		android:summary="@string/pc_general_sum"
  		/>
  	<header
		android:fragment="net.ausgstecktis.ui.PreferencesActivity$TakeMeHomePrefs"
  		android:icon="@android:drawable/ic_menu_directions"
  		android:title="@string/pc_take_me_home"
  		android:summary="@string/pc_take_me_home_sum"
  		/>
  	<header android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/b_visit_our_website"
            android:summary="@string/b_visit_our_website_sum">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://ausgstecktis.net" />
    </header>
  	<header android:icon="@android:drawable/sym_action_email"
            android:title="@string/b_send_us_mail"
            android:summary="@string/b_send_us_mail_sum">
        <intent android:action="android.intent.action.VIEW"
                android:data="mailto:android@geekosphere.org" />
    </header>
    <header
		android:fragment="net.ausgstecktis.ui.PreferencesActivity$PoweredByFragment"
  		android:icon="@android:drawable/ic_menu_myplaces"
  		android:title="@string/h_powered_by"
  		android:summary="@string/h_powered_by_sum" />
</preference-headers>