<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2011  naikon, wexoo
	android@geekosphere.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	 
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    
  	<PreferenceCategory
  		android:title="@string/pc_take_me_home">
  		<EditTextPreference
  			android:title="@string/etp_home_street_and_number"
  			android:key="@string/etp_home_street_and_number_key" />
  		<EditTextPreference
  			android:title="@string/etp_home_zipcode_and_city"
  			android:key="@string/etp_home_zipcode_and_city_key" />
  	</PreferenceCategory>
</PreferenceScreen>