<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2011  naikon, wexoo
	android@geekosphere.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	 
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    
	<Preference
	    android:id="@+id/p_local_database_version"
	    android:key="@string/info_latest_update"
   		android:title="@string/info_latest_update"
   		android:summary="@string/info_no_database" 
   		android:layout="@layout/app_info_preference"/>
	<Preference
	    android:id="@+id/p_duration_last_update"
   		android:key="@string/duration_last_update"
   		android:title="@string/duration_last_update"
   		android:summary="@string/info_no_database"
   		android:layout="@layout/app_info_preference"/>
</PreferenceScreen>