<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2011  naikon, wexoo
	android@geekosphere.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	 
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
    </LinearLayout>
    
 	<ScrollView 
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		    <TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="15dip"
				android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip">
				<TableLayout
					android:layout_width="fill_parent"
		    		android:layout_height="fill_parent">
					<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
						<TextView style="@style/SearchText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_keyword_title" android:layout_span="2"></TextView>
					</TableRow>
					<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
						<View android:layout_width="280dip" android:background="@drawable/black_white_gradient" android:layout_height="1dp" android:layout_span="2"></View>
					</TableRow>
					<TableRow>
						<AutoCompleteTextView
							android:layout_marginTop="15dip"
							android:layout_marginLeft="5dip"
							android:layout_marginRight="5dip"
							android:textColor="@color/black"
					    	android:id="@+id/actv_search"
					    	android:layout_height="wrap_content"
					    	android:hint="@string/search_all_hint"
					    	android:completionThreshold="2" android:layout_width="230dp"/>
				 		<Button
				 			style="@style/SearchButtonText"
				 			android:layout_marginTop="13dip"
				 			android:id="@+id/b_search_all_button" 
					    	android:onClick="startSearch"
					    	android:text="@string/btn_search"
					    	android:gravity="center_vertical|center_horizontal"  />         
				 	</TableRow>
			 	</TableLayout>
			</TableLayout>
		    <TableLayout android:layout_marginRight="5dip" android:layout_width="fill_parent" android:layout_marginLeft="5dip" android:layout_marginTop="10dip" android:layout_marginBottom="15dip" android:layout_height="wrap_content">
		        <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
		            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
		                <TextView style="@style/SearchText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/search_location_title" android:layout_span="2"></TextView>
		            </TableRow>
		            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
		                <View android:layout_width="280dip" android:background="@drawable/black_white_gradient" android:layout_height="1dp" android:layout_span="2"></View>
		            </TableRow>
		            <TableRow>
		                <AutoCompleteTextView android:hint="@string/search_location_hint" android:textColor="@color/black" android:layout_marginTop="15dip" android:layout_marginLeft="5dip" android:id="@+id/actv_search_location" android:layout_height="wrap_content" android:completionThreshold="2" android:layout_marginRight="5dip" android:layout_width="230dp"></AutoCompleteTextView>
		                <Button style="@style/SearchButtonText" 
		                android:layout_marginTop="13dip" 
		                android:gravity="center_vertical|center_horizontal" 
		                android:text="@string/btn_search" 
		                android:id="@+id/b_search_location_button" 
		                android:onClick="startSearch"></Button>
		            </TableRow>
		        </TableLayout>
		    </TableLayout>
    		<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:digits="sytss" style="@style/SearchTextCheckBox" android:text="@string/include_date_to_search" android:id="@+id/include_date_in_search" android:layout_marginLeft="10dp" android:paddingLeft="42dp"></CheckBox>
    		<DatePicker android:layout_height="wrap_content" android:id="@+id/search_date_picker" android:layout_marginLeft="0dp" android:layout_marginTop="5dp" android:layout_width="fill_parent"></DatePicker>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

