<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2011  naikon, wexoo
	android@geekosphere.org
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	 
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include layout="@layout/title_bar" />
    
    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		    <TextView
				android:id="@+id/tv_info_database_version"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				style="@style/InfoText" 
				android:text="@string/info_latest_update"/>
			
			<View
			    android:background="@drawable/black_white_gradient"
			    android:layout_height="1dp" 
			    android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip"
			    android:layout_width="fill_parent" />
		    
		    <TextView
		    	android:id="@+id/tv_local_database_version"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip" />
		    	
			  
			<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				style="@style/InfoText" 
				android:text="@string/duration_last_update"/>
				
			<View
			    android:background="@drawable/black_white_gradient"
			    android:layout_height="1dp" 
			    android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip"
			    android:layout_width="fill_parent" />
		    
		    <TextView
		    	android:id="@+id/tv_duration_last_update"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"  />
		
			<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				style="@style/InfoText" 
				android:text="@string/info_submit_heurigen"/>
				
			<View
			    android:background="@drawable/black_white_gradient"
			    android:layout_height="1dp" 
			    android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip"
			    android:layout_width="fill_parent" />
		    
		    <TextView
				android:id="@+id/tv_submit_new_heurigen"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"
				android:textColor="@color/klickable"
				style="@style/InfoKlickableText"
				android:text="@string/tv_submit_new_heurigen"
				android:onClick="startAction"
				android:clickable="true" />
		
			<TextView
				android:id="@+id/tv_about_us"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				style="@style/InfoText" 
				android:text="@string/info_about_us"/>
				
			<View
			    android:background="@drawable/black_white_gradient"
			    android:layout_height="1dp" 
			    android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip"
			    android:layout_width="fill_parent" />
				
			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:layout_marginLeft="5dip"
				android:layout_marginRight="5dip">
				<TableRow
					android:id="@+id/tr_mail_us"
					android:layout_marginTop="3dip"
					android:onClick="startAction">
					<ImageView
						android:layout_width="wrap_content"		
						android:layout_height="wrap_content"
						android:layout_marginLeft="5dip"
						android:src="@drawable/ic_mail_detail" 
						android:contentDescription="@string/tv_mail_us"/>
					<TextView
				    	android:id="@+id/tv_mail_us"
				    	android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:layout_marginLeft="10dip"
						android:textColor="@color/klickable"
						style="@style/InfoKlickableText"
						android:text="@string/tv_mail_us"
						android:onClick="startAction"
						android:clickable="true" />
				</TableRow>
				<TableRow
					android:id="@+id/tr_visit_us"
					android:layout_marginTop="10dip"
					android:onClick="startAction">
					<ImageView
						android:layout_width="wrap_content"		
						android:layout_height="wrap_content"
						android:layout_marginLeft="5dip"
						android:src="@drawable/ic_web_detail" 
						android:contentDescription="@string/tv_mail_us"/>
					<TextView
				    	android:id="@+id/tv_visit_us"
				    	android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:layout_marginLeft="10dip"
						android:textColor="@color/klickable"
						style="@style/InfoKlickableText"
						android:text="@string/tv_visit_us"
						android:onClick="startAction" 
						android:clickable="true" />
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>